--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,15 @@
     },
     "dashboard": {
       "tags": []
+    },
+    "material": {
+      "tags": []
+    },
+    "core-data": {
+      "tags": []
+    },
+    "core-state": {
+      "tags": []
     }
   }
 }
